[gd_scene load_steps=10 format=2]

[ext_resource path="res://prefab/object/box.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefab/actor/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefab/stage/stage_4_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://prefab/object/item.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/ui/player/player_ui.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefab/object/final_gate.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/stage/Stage.gd" type="Script" id=7]
[ext_resource path="res://prefab/ui/loading_ui.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefab/common/scene_loader.tscn" type="PackedScene" id=9]

[node name="PlayerScene" type="Node"]
script = ExtResource( 7 )
stage_list = [ "res://scene/stage/normal_stage/stage_1/stage_1.tscn", "res://scene/stage/normal_stage/stage_2/stage_2.tscn", "res://scene/stage/normal_stage/stage_3/stage_3.tscn" ]
final_stage_path = "res://scene/stage/final_stage/stage_4/stage_4.tscn"

[node name="GameController" type="Node" parent="."]

[node name="SceneLoader" parent="GameController" instance=ExtResource( 9 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="UI" instance=ExtResource( 5 )]

[node name="LoadingUI" parent="UI" instance=ExtResource( 8 )]
visible = false

[node name="GameWorld" type="Node" parent="."]

[node name="Item" type="Node" parent="GameWorld"]

[node name="Item" parent="GameWorld/Item" instance=ExtResource( 4 )]
position = Vector2( 376.477, 561.838 )
scale = Vector2( 2, 2 )

[node name="Item2" parent="GameWorld/Item" instance=ExtResource( 4 )]
position = Vector2( 80.1469, 369.897 )
scale = Vector2( 2, 2 )

[node name="Boxes" type="Node" parent="GameWorld"]

[node name="Box" parent="GameWorld/Boxes" instance=ExtResource( 1 )]
position = Vector2( 605.884, 544.761 )

[node name="Box2" parent="GameWorld/Boxes" instance=ExtResource( 1 )]
position = Vector2( 389.827, 224.297 )

[node name="FinalGate" parent="GameWorld" instance=ExtResource( 6 )]
position = Vector2( 769.811, 1.25992 )

[node name="TileMap" type="TileMap" parent="GameWorld"]
tile_set = ExtResource( 3 )
collision_layer = 8
collision_mask = 20
format = 1
tile_data = PoolIntArray( 131071, 0, 1, 65536, 0, 2, 65551, 0, 1, 65552, 0, 2, 196607, 0, 131073, 131072, 0, 131074, 131083, 0, 1, 131084, 0, 2, 131087, 0, 131073, 131088, 0, 131074, 262143, 0, 131073, 196608, 0, 131074, 196619, 0, 131073, 196620, 0, 131074, 196623, 0, 131073, 196624, 0, 131074, 327679, 0, 131073, 262144, 0, 131074, 262149, 0, 196608, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 196610, 262155, 0, 65537, 262156, 0, 65538, 262159, 0, 131073, 262160, 0, 131074, 393215, 0, 131073, 327680, 0, 131074, 327695, 0, 131073, 327696, 0, 131074, 458751, 0, 131073, 393216, 0, 65539, 393217, 0, 65536, 393218, 0, 2, 393231, 0, 131073, 393232, 0, 131074, 524287, 0, 131073, 458752, 0, 196619, 458753, 0, 196619, 458754, 0, 131074, 458765, 0, 1, 458766, 0, 65536, 458767, 0, 65540, 458768, 0, 131074, 589823, 0, 131073, 524288, 0, 196619, 524289, 0, 196619, 524290, 0, 65539, 524291, 0, 2, 524299, 0, 1, 524300, 0, 65536, 524301, 0, 65540, 524302, 0, 196619, 524303, 0, 196619, 524304, 0, 131074, 655359, 0, 65537, 589824, 0, 131072, 589825, 0, 131072, 589826, 0, 131072, 589827, 0, 65547, 589828, 0, 196609, 589829, 0, 196609, 589830, 0, 196609, 589831, 0, 196609, 589832, 0, 196609, 589833, 0, 196609, 589834, 0, 196609, 589835, 0, 65544, 589836, 0, 131072, 589837, 0, 131072, 589838, 0, 131072, 589839, 0, 131072, 589840, 0, 65538 )

[node name="Player" parent="GameWorld" instance=ExtResource( 2 )]
position = Vector2( 487.12, 227.334 )
[connection signal="on_finish_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_finish_load"]
[connection signal="on_start_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_start_load"]
[connection signal="on_update_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_update_load"]
[connection signal="on_interact" from="GameWorld/FinalGate" to="." method="_on_FinalGate_on_interact"]
[connection signal="on_attack" from="GameWorld/Player" to="UI/PlayerUI" method="_on_Player_on_attack"]
[connection signal="on_stat_changed" from="GameWorld/Player" to="UI/PlayerUI" method="_on_Player_on_stat_changed"]
