[gd_scene load_steps=17 format=2]

[ext_resource path="res://scene/stage/normal_stage/stage_4/stage_4_room_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefab/actor/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://prefab/object/normal_gate.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefab/ui/player/player_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/stage/Stage.gd" type="Script" id=5]
[ext_resource path="res://prefab/ui/loading_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefab/common/scene_loader.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/stage/normal_stage/stage_4/stage_4_room_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/stage/normal_stage/stage_4/stage_4_room_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefab/common/grid_snap_camera.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/environment/background/forest-background/parallax-forest-back-trees.png" type="Texture" id=11]
[ext_resource path="res://assets/environment/background/forest-background/parallax-forest-middle-trees.png" type="Texture" id=12]
[ext_resource path="res://assets/environment/background/forest-background/parallax-forest-front-trees.png" type="Texture" id=13]
[ext_resource path="res://assets/environment/background/forest-background/parallax-forest-lights.png" type="Texture" id=14]
[ext_resource path="res://prefab/object/auto_door.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefab/object/hazard.tscn" type="PackedScene" id=16]

[node name="Stage4" type="Node"]
script = ExtResource( 5 )
stage_list = [ "res://scene/stage/normal_stage/stage_1/stage_1.tscn", "res://scene/stage/normal_stage/stage_2/stage_2.tscn", "res://scene/stage/normal_stage/stage_3/stage_3.tscn" ]
final_stage_path = "res://scene/stage/final_stage/final_stage_1/final_stage_1.tscn"

[node name="GameController" type="Node" parent="."]

[node name="SceneLoader" parent="GameController" instance=ExtResource( 7 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="UI" instance=ExtResource( 4 )]

[node name="LoadingUI" parent="UI" instance=ExtResource( 6 )]
visible = false

[node name="GameWorld" type="Node" parent="."]

[node name="GridSnapCamera" parent="GameWorld" instance=ExtResource( 10 )]
player_node_path = NodePath("../../../Stage4/GameWorld/Player")

[node name="Background" type="Node" parent="GameWorld"]

[node name="parallax-forest-back-trees" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 512, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 11 )

[node name="parallax-forest-back-trees2" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 1536, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 11 )

[node name="parallax-forest-back-trees3" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 2560, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 11 )

[node name="parallax-forest-middle-trees" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 512, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 12 )

[node name="parallax-forest-middle-trees2" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 1536, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 12 )

[node name="parallax-forest-middle-trees3" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 2560, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 12 )

[node name="parallax-forest-front-trees" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 512, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 13 )

[node name="parallax-forest-front-trees2" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 1536, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 13 )

[node name="parallax-forest-front-trees3" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 2560, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 13 )

[node name="parallax-forest-lights" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 512, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 14 )

[node name="parallax-forest-lights2" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 1536, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 14 )

[node name="parallax-forest-lights3" type="Sprite" parent="GameWorld/Background"]
position = Vector2( 2560, 288 )
scale = Vector2( 3.76471, 3.6 )
texture = ExtResource( 14 )

[node name="Rooms" type="Node" parent="GameWorld"]

[node name="Room1" parent="GameWorld/Rooms" instance=ExtResource( 1 )]

[node name="Room2" parent="GameWorld/Rooms" instance=ExtResource( 9 )]
position = Vector2( 1024, 0 )

[node name="Room3" parent="GameWorld/Rooms" instance=ExtResource( 8 )]
position = Vector2( 2048, 0 )

[node name="Gates" type="Node" parent="GameWorld"]

[node name="NormalGate" parent="GameWorld/Gates" instance=ExtResource( 3 )]
position = Vector2( 2784, 464 )
scale = Vector2( 0.5, 0.5 )

[node name="Doors" type="Node" parent="GameWorld"]

[node name="AutoDoor" parent="GameWorld/Doors" instance=ExtResource( 15 )]
position = Vector2( 2048, 448 )
scale = Vector2( 0.5, 0.5 )

[node name="Hazards" type="Node" parent="GameWorld"]

[node name="Hazard" parent="GameWorld/Hazards" instance=ExtResource( 16 )]
position = Vector2( 1520.96, 495.917 )

[node name="Hazard2" parent="GameWorld/Hazards" instance=ExtResource( 16 )]
position = Vector2( 1489.54, 495.917 )

[node name="Hazard3" parent="GameWorld/Hazards" instance=ExtResource( 16 )]
position = Vector2( 1552.39, 495.917 )

[node name="Hazard4" parent="GameWorld/Hazards" instance=ExtResource( 16 )]
position = Vector2( 1767.91, 495.917 )

[node name="Hazard5" parent="GameWorld/Hazards" instance=ExtResource( 16 )]
position = Vector2( 1799.34, 495.917 )

[node name="Player" parent="GameWorld" instance=ExtResource( 2 )]
position = Vector2( 544, 488 )
scale = Vector2( 2, 2 )
[connection signal="on_finish_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_finish_load"]
[connection signal="on_start_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_start_load"]
[connection signal="on_update_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_update_load"]
[connection signal="on_interact" from="GameWorld/Gates/NormalGate" to="." method="_on_NormalGate_on_interact"]
[connection signal="on_attack" from="GameWorld/Player" to="UI/PlayerUI" method="_on_Player_on_attack"]
[connection signal="on_stat_changed" from="GameWorld/Player" to="UI/PlayerUI" method="_on_Player_on_stat_changed"]
